--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
 
     <section class="contact" id="contact">
         <div class="container headings text-center">
-            <h2 class="font-weight-bold text-center ">Contact Us</h2>
+            <h2 class="font-weight-bold text-center ">Contact Us Here</h2>
             <p>We are there to help you always. </p>
         </div>
 
